# SWA-Project

./: interactivePipelineExample.py  listOrderingWidget.py  main.py  mermaidimages.txt  pyproject.toml
.history/: interactivePipelineExample_20250603114014.py  interactivePipelineExample_20250603114042.py  interactivePipelineExample_20250603114816.py  interactivePipelineExample_20250603114820.py  interactivePipelineExample_20250603114843.py  interactivePipelineExample_20250603114849.py  interactivePipelineExample_20250603115035.py  interactivePipelineExample_20250603115039.py  interactivePipelineExample_20250603115052.py  interactivePipelineExample_20250603115057.py  interactivePipelineExample_20250603115102.py  interactivePipelineExample_20250603115232.py  interactivePipelineExample_20250603120026.py  interactivePipelineExample_20250603120032.py  interactivePipelineExample_20250603120035.py  interactivePipelineExample_20250603120041.py  interactivePipelineExample_20250603120045.py  interactivePipelineExample_20250603120057.py  interactivePipelineExample_20250603120111.py  interactivePipelineExample_20250603120117.py  interactivePipelineExample_20250603120413.py  interactivePipelineExample_20250603120544.py  interactivePipelineExample_20250603120648.py  interactivePipelineExample_20250603120912.py  interactivePipelineExample_20250603120924.py  interactivePipelineExample_20250603121251.py  interactivePipelineExample_20250603121736.py  interactivePipelineExample_20250603121951.py  interactivePipelineExample_20250603121955.py  interactivePipelineExample_20250603125750.py  (+124 more)
(+425 files in other folders)
